--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <title>React 3D</title>
   </head>
-  <body style="margin: 0;">
+  <body>
     <div id="root"></div>
     <div nameId="containerScene2" style="position: absolute; top: 40px; left: 0; right: 310px; bottom: 0;"></div>
   </body>
